<resources>
    <string name="app_name">Asegura Lorant</string>
    <string name="action_settings">Configuración</string>
    <string name="none"></string>
    <string name="reportEvent">Reportar\nAccidentes</string>
    <string name="report">Reporte</string>
    <string name="historical">Historial</string>
    <string name="crashReport">Reporte de Choque</string>
    <string name="notifications">Notificaciones</string>
    <string name="quote">Cotiza tu Seguro</string>
    <string name="tips">Tips</string>
    <string name="tipsCar">Tips Autos</string>
    <string name="tipsHome">Tips Casa</string>
    <string name="tipsLife">Tips Vida</string>
    <string name="tipsMedical">Tips Medico</string>
    <string name="tipsPet">Tips Mascotas</string>
    <string name="tipsEducation">Tips Educación</string>
    <string name="tipsOther">Tips Otros</string>
    <string name="contact">Contacto</string>
    <string name="about">Acerca de Lorantmms</string>
    <string name="stickerLb">Calcomanía:</string>
    <string name="mail">Correo:</string>
    <string name="phone">Teléfono:</string>
    <string name="rememberVerification">Recordar verificación</string>
    <string name="aboutLorant">Acerca de\nLorantmms</string>
    <string name="imageNotFound">Imagen no disponible</string>
    <string name="myCalendar">Mi Calendario\nde Verificación</string>
    <string name="myPayments">Mis Pagos</string>
    <string name="searchDealers">Localizar Agencias\nde Autos</string>
    <string name="dealers">Agencias</string>
    <string name="myAssurance">Mis Pólizas</string>
    <string name="addCarInssurance">Agregar Póliza de Auto</string>
    <string name="carInssurance">Póliza de Auto</string>
    <string name="addHomeInssurance">Agregar Póliza de Hogar</string>
    <string name="homeInssurance">Póliza de Hogar</string>
    <string name="addLifeInssurance">Agregar Póliza de Vida</string>
    <string name="lifeInssurance">Póliza de Vida</string>
    <string name="addPetInssurance">Agregar Póliza de Mascotas</string>
    <string name="petInssurance">Póliza de Mascotas</string>
    <string name="addEducationInssurance">Agregar Póliza de Educación</string>
    <string name="educationInssurance">Póliza de Educación</string>
    <string name="addMedicalInssurance">Agregar Póliza de Gastos Médicos</string>
    <string name="medicalInssurance">Póliza de Gastos Médicos</string>
    <string name="addOtherInssurance">Agregar Póliza</string>
    <string name="otherInssurance">Póliza</string>
    <string name="addInssuranceInformation">Más información de Póliza</string>
    <string name="calendar">Calendario de Verificación</string>
    <string name="quotation">Cotiza</string>
    <string name="addAssurance">Agregar Póliza</string>
    <string name="viewPolicyImage">Ver Póliza</string>
    <string name="nickName">ALIAS</string>
    <string name="nickNameLb">Alias de la póliza:</string>
    <string name="rememberPaymentDaysLb">Recordar días de pago:</string>
    <string name="zipCodeLabel">Código Postal :</string>
    <string name="number">NÚMERO</string>
    <string name="endDate">FIN DE VIGENCIA</string>
    <string name="insurance">ASEGURADORA</string>
    <string name="startSession">Iniciar Sesión</string>
    <string name="user">Usuario</string>
    <string name="forgetPassword">¿Olvidaste tu contraseña?</string>
    <string name="entry">Entrar</string>
    <string name="password">Contraseña</string>
    <string name="registration">Registrarse</string>
    <string name="fbRegistration">Registrarse con facebook</string>
    <string name="register">Registro</string>
    <string name="selectAssurance">Seleccionar Póliza/Alias</string>
    <string name="myCellNumber">Mi Número de Celular</string>
    <string name="cellLabel">Celular:</string>
    <string name="sendLocation">ENVIAR UBICACIÓN Y LLAMAR</string>
    <string name="share">Compartir</string>
    <string name="sinisterPhoto">Foto de Siniestro</string>
    <string name="useQR">Utilizar QR</string>
    <string name="saveAndContinue">GUARDAR Y CONTINUAR</string>
    <string name="call">LLAMAR</string>
    <string name="assuranceSent">Póliza enviada</string>
    <string name="myLocation">Mi ubicación</string>
    <string name="itemDeleted">Elemento Borrado</string>
    <string name="tapToUndo">Deshacer</string>
    <string name="nameLabel">Nombre :</string>
    <string name="lastNameLabel">Apellido Paterno :</string>
    <string name="middleNameLabel">Apellido Materno :</string>
    <string name="informationLabel">Información :</string>
    <string name="mailLabel">Correo (Usuario) :</string>
    <string name="mailLb">Correo:</string>
    <string name="zipCodeLb">C.P.</string>
    <string name="policyNumberLabel">Número de Póliza :</string>
    <string name="search">Búsqueda</string>
    <string name="searchDialog">Introduce el número de póliza y el número de serie</string>
    <string name="policyNumber">Número de Póliza</string>
    <string name="serialNumber">Número de Serie</string>
    <string name="causeLabel">Causa :</string>
    <string name="phoneLabel">Teléfono del titular :</string>
    <string name="passwordLabel">Contraseña :</string>
    <string name="noInformation">Sin información</string>
    <string name="repeatPasswordLabel">Repetir Contraseña :</string>
    <string name="minPasswordLength">8 caracteres mínimo</string>
    <string name="searchLabel">Buscar . . .</string>
    <string name="accept">Aceptar</string>
    <string name="send">Enviar</string>
    <string name="policySearch">Búsqueda de Póliza</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="cancel">Cancelar</string>
    <string name="poblation">Col</string>
    <string name="retrievePassOK">Contraseña enviada al correo registrado</string>
    <string name="cars">Autos</string>
    <string name="home">Hogar</string>
    <string name="life">Vida</string>
    <string name="doctor">Gastos\nMédicos</string>
    <string name="medical">Gastos Médicos</string>
    <string name="education">Educación</string>
    <string name="pets">Mascotas</string>
    <string name="others">Otros</string>
    <string name="assuranceNumberLbl">Número de Póliza:</string>
    <string name="assuranceLbl">Aseguradora:</string>
    <string name="descriptionLbl">Descripción:</string>
    <string name="platesLbl">Placas:</string>
    <string name="ownerNameLbl">Nombre del Asegurado:</string>
    <string name="ownerPhoneLbl">Teléfono:</string>
    <string name="ownerMailLbl">Correo:</string>
    <string name="startPeriodLbl">Inicio de Vigencia:</string>
    <string name="endPeriodLbl">Fin de Vigencia:</string>
    <string name="rememberEndLbl">Recordar Vigencia</string>
    <string name="paymentNameLbl">Forma de pago:</string>
    <string name="sellerNameLbl">Agente:</string>
    <string name="productNameLbl">Paquete:</string>
    <string name="coveragesLbl">COBERTURAS AMPARADAS</string>
    <string name="detailsLbl">DETALLE</string>
    <string name="nearOfYou">Cerca de tí</string>
    <string name="searchByCity">Búsqueda por estado</string>
    <string name="uploadAssurance">Sube tu Póliza</string>
    <string name="moreInformation">Más información</string>
    <string name="camera">Cámara</string>
    <string name="gallery">Galería</string>
    <string name="policyAlreadyExits">Póliza ya registrada</string>
    <string name="message">Aviso</string>
    <string name="policyNotFound">La póliza que deseas registrar no es administrada por lorantmms.\n¿Deseas agregarla?</string>
    <string name="policyDelete">La póliza será eliminada ¿Deseas continuar?</string>
    <string name="updateEnabled">Modo de Actualización</string>
    <string name="serialNumberLbl">Número de Serie:</string>
    <string name="descripcionLb">Descripción:</string>
    <string name="quoatation_1">Mejora el precio y cobertura con atención</string>
    <string name="quoatation_2">Llámanos al</string>
    <string name="quoatation_3">extraordinaria</string>
    <string name="quoatationPhone">3093 6840</string>
    <string name="quoatation_4">y compruébalo</string>
    <string name="paymentInstrumentationLb">Instrumento de pago:</string>
    <string name="bankLb">Banco:</string>
    <string name="paymentDaysLb">Días de pago:</string>
    <string name="observationsLb">Observaciones:</string>
    <string name="rememberFromLb">Recordatorio del:</string>
    <string name="toLb">Al:</string>
    <string name="updateOK">Póliza actualizada</string>
    <string name="insertOK">Póliza agregada</string>
    <string name="policyNickNameLb">Seleccionar Póliza/Alias:</string>
    <string name="policyAreadyExists">La Póliza ya fue registrada</string>
    <string name="tipsCarList">- Conservar la calma\n- Llamar y/o reportar inmediatamente a la compañía de seguros\n- Proporcionar la siguiente información \n- No. De póliza\n- Nombre del conductor\n- Ubicación exacta del siniestro\n- No. De teléfono donde se le pueda localizar\n- Color de la unidad y placas\n- Breve descripción de los hechos\n- No abandonar el lugar del siniestro (salvo causas de fuerza mayor)\n- No hacer ninguna negociación, ni llegar a acuerdos con terceros\n\nEn caso de Robo.\n- Inmediatamente levantar acta ante el ministerio público y solicitar copia certificada de la denuncia\n- Dar aviso a la PFP si el robo ocurre fuera del D.F. y obtener copia del aviso\n- Dar aviso a tu compañía aseguradora.</string>
    <string name="tipsHomeList">- Llamar a tu Agente de Seguros\n- Tener a la mano la póliza contratada</string>
    <string name="tipsLifeList">- Llamar al agente de seguros\n- Certificado y/o consentimiento del seguro de vida</string>
    <string name="tipsMedicalList">- Acudir al hospital en convenio mas cercano\n- Llamar al centro de atención para conocer red de hospitales en convenio\n- Tener a la mano número de póliza\n- Al ingresar al hospital Identificarse\n- Hospitalización mayor a 24 hrs la aseguradora podrá pagar los gastos relacionados al padecimiento\n- Hospitalización menor a 24 hrs la aseguradora realizara el pago relacionados al padecimiento vía rembolso\n- Notificar al agente de seguros para asesoría y gestión de los documentos</string>
    <string name="tipsPetList">- Llamar a la compañía de seguros y reportar el siniestro\n- Llevar al veterinario y solicitar factura a su nombre\n- Notificar al agente de seguros para asesoría y gestión de los documentos</string>
    <string name="tipsEducationList">- Llamar al agente de seguros\n- Tener a la mano Póliza contratada\n- Tener a la mano Certificado seguro </string>
    <string name="tipsOtherList">- Llamar al agente de seguros\n- Tener a la mano Póliza contratada</string>
    <string name="verification">Verificación</string>
    <string name="policyExpiry">Renovación Póliza</string>
    <string name="policyExpiryDescription">La Póliza (%1$s) esta próxima a vencer</string>
    <string name="policyPayment">Pago de Póliza</string>
    <string name="policyPaymentDescription">El pago de la Póliza (%1$s) esta próximo a vencer</string>
    <string name="errCommunications">Error de comunicación (%1$s)</string>
    <string name="errBussines">Error: (%1$s)</string>
    <string name="errUnexpected">Error inesperado</string>
    <string name="errNameRequired">Ingresar el Nombre</string>
    <string name="errLastNameRequired">Ingresar el Apellido Paterno</string>
    <string name="errMiddleNameRequired">Ingresar el Apellido Materno</string>
    <string name="errMailRequired">Ingresar la direccion de correo</string>
    <string name="errMailWrong">Direccion de correo inválida</string>
    <string name="errPhoneRequired">Ingresar el número telefónico</string>
    <string name="errPhoneWrong">Teléfono inválido</string>
    <string name="errPasswordRequired">Ingresar la contraseña</string>
    <string name="errRepeatPasswordRequired">Repetir la contraseña</string>
    <string name="errRepeatPasswordShort">La contraseña debe tener mínimo 8 caracteres</string>
</resources>