<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/themeWhite"
    tools:context="com.lorant.mobile.android.ui.view.ReportDetail" >

    <ListView android:id="@+id/lvPolicies"
        android:layout_width="match_parent"
        android:layout_height="456dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:drawSelectorOnTop="false" >

    </ListView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/themeRed"
        android:gravity="center"
        android:text="@string/nickName"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_above="@+id/lvPolicies"
        android:layout_toLeftOf="@+id/TextView03"
        android:layout_toStartOf="@+id/TextView03"
        android:layout_toRightOf="@+id/textView1"
        android:layout_toEndOf="@+id/textView1"
        android:background="@color/themeRed"
        android:gravity="center"
        android:text="@string/endDate"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_above="@+id/lvPolicies"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/themeRed"
        android:gravity="center_vertical"
        android:text="@string/insurance"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />
    
</RelativeLayout>